# aluminium-prediction

./: .gitignore  Aluminium_data.ipynb  Aluminium_production.ipynb  Diagram bez tytułu.drawio  Plotly_example.ipynb  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_aquisition.yml
notebooks/: Aluminium_data.ipynb  Fractional_Brownian_Motion_reconstruct_hurst_function.ipynb  Time_series_causality.ipynb
readme/: Aluminium_prices_sources.md  Diagram bez tytułu.drawio.html  Kedro.md  aluminium_prices_sources.md  indicators.md  problem_statement.md  timeseries_analysis.md
src/: datasets.py
src/aluminium_prediction/: __init__.py  __main__.py  causality.py  pipeline_registry.py  scrapping.py  stationarity.py  timeutils.py
src/aluminium_prediction/pipelines/aquisition/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/aquisition/: test_pipeline.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
